# MoLE_VLA

./: README.md  environment.yml  pyproject.toml  should  train.sh  train_multi.sh  train_multi_task10_mix.sh
MoE_model/: llama2.py  materialize.py  modeling_llama copy 2.py  modeling_llama copy.py  modeling_llama_deer.py  modeling_llama_ffn_MoE_8.py
MoLE_VLA_model/: llama2.py  materialize.py  modeling_llama.py  modeling_llama_mod.py
action_model/: __init__.py  action_model.py  gaussian_diffusion.py  models.py  respace.py
cogact.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
conf/: __init__.py  vla.py
dataset/10tasks_selected_keyframe_state/rlbench/1.0.0/: dataset_info.json  dataset_statistics_718c0cb69ab23a5355adb5c99f8026dd006399eb232748f52fc088768569c6c2.json  features.json
prismatic_new/models/backbones/llm/prompting/: base_prompter.py
prismatic_new/util/: data_utils.py
prismatic_new/vla/: materialize.py
prismatic_new/vla/datasets/: datasets.py
prismatic_new/vla/datasets/rlds/: dataset.py  traj_transforms.py
prismatic_new/vla/datasets/rlds/oxe/: configs.py  mixtures.py  transforms.py
scripts/: train.py
sim_cogact/: cogact_policy.py
training/: materialize.py  metrics.py
training/strategies/: __init__.py  base_strategy_cogact.py  fsdp.py
vla/: __init__.py  cogactvla.py  load.py
